# ai-financial-news-agent

./: .env.example  .gitignore  QUICK_START.md  README.md  WORKFLOW_GUIDE.md  pyproject.toml
aifn/: __init__.py
aifn/src/: PROMPTS_GUIDE.md  PROMPTS_MODULE_README.md  README_SUMMARY_MODULE.md  SUMMARY_USAGE.md  crawler.py  main.py  prompts.py  rag.py  summary.py
aifn/tests_aifn/: README.md  test_daily_analysis.py  test_reflection.py
